applications/whisper-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: whisper-api
  name: whisper-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whisper-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: whisper-api
    spec:
      containers:
      - name: whisper-api
        image: quay.io/rh-ee-sglinton/openai-whisper-asr-webservice:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
            nvidia.com/gpu: 1
          limits:
            memory: "1Gi"
            cpu: "1000m"
            nvidia.com/gpu: 1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
          protocol: TCP
      tolerations:
      - key: nvidia.com/gpu.product
        operator: Equal
        value: Tesla-V100-PCIE-32GB
        effect: NoSchedule
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
