applications/whisper-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: whisper-api
  name: whisper-api
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: whisper-api
  sessionAffinity: None
  type: ClusterIP
