applications/whisper-api/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: whisper-api
  name: whisper-api
spec:
  port:
    targetPort: 9000
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: whisper-api
    weight: 100
  wildcardPolicy: None
